profile links update

--- a/index.html
+++ b/index.html
@@ -603,10 +603,8 @@
               <h4 class="title">Web Developer</h4>
             </div>
             <ul class="social">
-              <li><a href="" class="fa fa-facebook" aria-hidden="true"></a></li>
-              <li><a href="" class="fa fa-twitter" aria-hidden="true"></a></li>
-              <li><a href="" class="fa fa-google-plus" aria-hidden="true"></a></li>
-              <li><a href="" class="fa fa-linkedin" aria-hidden="true"></a></li>
+              <li><a href="https://github.com/ibhavikamalhotra" class="fa fa-github" aria-hidden="true"></a></li>
+              <li><a href="https://www.linkedin.com/in/ibhavikamalhotra/" class="fa fa-linkedin" aria-hidden="true"></a></li>
             </ul>
           </div>
         </div>
@@ -621,10 +619,10 @@
               <h4 class="title">Web Developer</h4>
             </div>
             <ul class="social">
-              <li><a href="" class="fa fa-facebook" aria-hidden="true"></a></li>
-              <li><a href="" class="fa fa-twitter" aria-hidden="true"></a></li>
-              <li><a href="" class="fa fa-google-plus" aria-hidden="true"></a></li>
-              <li><a href="" class="fa fa-linkedin" aria-hidden="true"></a></li>
+             
+              <li><a href="https://twitter.com/harshitshharma" class="fa fa-twitter" aria-hidden="true"></a></li>
+              <li><a href="https://github.com/icoderharshit" class="fa fa-github" aria-hidden="true"></a></li>
+              <li><a href="https://www.linkedin.com/in/iharshitsharma/" class="fa fa-linkedin" aria-hidden="true"></a></li>
             </ul>
           </div>
         </div>
